[package]
name = "popwin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.27"

# Utilities
arboard = "3"
crossbeam-channel = "0.5"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
webbrowser = "0.8"
urlencoding = "2"

# Windows API
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_DataExchange", # Clipboard
    "Win32_UI_Accessibility",    # UI Automation
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",        # Monitor info
] }
